This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix the name of Tkinter's adderrorinfo method
Type: behavior Stage: resolved
Components: Tkinter Versions: Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: serhiy.storchaka Nosy List: serhiy.storchaka
Priority: normal Keywords: patch

Created on 2017-10-03 11:35 by serhiy.storchaka, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 3864 merged serhiy.storchaka, 2017-10-03 11:41
PR 3873 merged serhiy.storchaka, 2017-10-03 19:04
Messages (3)
msg303597 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-10-03 11:35
When the _tkinter module was converted to Argument Clinic in issue20168, the name of the adderrorinfo method was written as "adderrinfo". This error was left unnoticed because there are no tests for this method besides bigmem tests. Today I have ran bigmem tests first time (they require 64-bit system and large amount of memory) and have found this typo. Seems these tests are not ran on any buildbots.
msg303638 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-10-03 18:37
New changeset 929b40a601db868530d6beaafb3256822103a7fb by Serhiy Storchaka in branch 'master':
bpo-31673: Fixed typo in the name of Tkinter's method adderrorinfo(). (#3864)
https://github.com/python/cpython/commit/929b40a601db868530d6beaafb3256822103a7fb
msg303641 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-10-03 19:39
New changeset fcc832a4fafcbbaca5484ed0274935e14c9dcf6b by Serhiy Storchaka in branch '3.6':
[3.6] bpo-31673: Fixed typo in the name of Tkinter's method adderrorinfo(). (GH-3864). (#3873)
https://github.com/python/cpython/commit/fcc832a4fafcbbaca5484ed0274935e14c9dcf6b
History
Date User Action Args
2022-04-11 14:58:53adminsetgithub: 75854
2017-10-03 21:44:46serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2017-10-03 19:39:40serhiy.storchakasetmessages: + msg303641
2017-10-03 19:04:03serhiy.storchakasetpull_requests: + pull_request3852
2017-10-03 18:37:24serhiy.storchakasetmessages: + msg303638
2017-10-03 12:09:17serhiy.storchakalinkissue31675 dependencies
2017-10-03 11:41:48serhiy.storchakasetkeywords: + patch
pull_requests: + pull_request3844
2017-10-03 11:35:06serhiy.storchakacreate