bpo-31673: Fixed typo in the name of Tkinter's method adderrorinfo().